--- a/sites/l30/css/styles.css
+++ b/sites/l30/css/styles.css
@@ -18,3 +18,32 @@ body {
   height: 150px;
   margin: 10px 15px 10px 0;
 }
+
+.navbar-brand {
+  padding-top: 25px;
+}
+
+.navbar-brand h1 { /* Restourant name */
+  font-family: 'Lora', serif;
+  color: #557c3e;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  line-height: 0.75;
+}
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
+}
+.navbar-brand p{ /* Kosher cert */
+  color: #000;
+  text-transform: uppercase;
+  font-size: 0.7em;
+  margin-top: 15px;
+}
+.navbar-brand p span {/* Star-K */
+  /*vertical-align: middle;*/
+}
+
