--- a/sites/l31/css/styles.css
+++ b/sites/l31/css/styles.css
@@ -74,4 +74,12 @@ body {
   padding-right: 15px;
 }
 
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid #61122f;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
+}
+/* END HEADER */
 
