--- a/sites/l31/css/styles.css
+++ b/sites/l31/css/styles.css
@@ -123,6 +123,13 @@ body {
   .navbar-brand p img { /* Star-K */
     height: 20px;
   }
+  #collapsable-nav a { /* Collapsed nav menu text */
+    font-size: 1.2em;
+  }
+  #collapsable-nav a span { /* Collapsed nav menu text */
+    font-size: 1em;
+    margin-right: 5px;
+  }
 
 
   /* End Header */
