--- a/sites/l31/css/styles.css
+++ b/sites/l31/css/styles.css
@@ -23,28 +23,28 @@ body {
   padding-top: 25px;
 }
 
-.navbar-brand h1 { /* Restourant name */
+.navbar-brand h1 { /* Restaurant name */
   font-family: 'Lora', serif;
   color: #557c3e;
-  text-transform: uppercase;
   font-size: 1.5em;
+  text-transform: uppercase;
   font-weight: bold;
   text-shadow: 1px 1px 1px #222;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  line-height: 0.75;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: .75;
 }
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
 }
-.navbar-brand p{ /* Kosher cert */
+.navbar-brand p { /* Kosher cert */
   color: #000;
   text-transform: uppercase;
-  font-size: 0.7em;
+  font-size: .7em;
   margin-top: 15px;
 }
-.navbar-brand p span {/* Star-K */
-  /*vertical-align: middle;*/
+.navbar-brand p span { /* Star-K */
+  vertical-align: middle;
 }
 
 #nav-list {
@@ -89,6 +89,40 @@ body {
   border: 2px solid #3F0C1F;
 }
 
+#menu-tile, #specials-tile, #map-tile {
+  height: 250px;
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+}
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-tile {
+  background: url('../images/menu-tile.jpg') no-repeat;
+  background-position: center;
+}
+#specials-tile {
+  background: url('../images/specials-tile.jpg') no-repeat;
+  background-position: center;
+}
+
+#menu-tile span, #specials-tile span, #map-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+
 /* END HOME PAGE */
 
 /********** Large devices only **********/
@@ -109,6 +143,7 @@ body {
     margin: 5px 5px 5px 0;
   }
   /* End Header */
+
   /* Home Page */
   .container .jumbotron {
     background: url('../images/jumbotron_992.jpg') no-repeat;
@@ -125,6 +160,7 @@ body {
     height: 432px;
   }
   /* End Home Page */
+
 }
 
 /********** Extra small devices only **********/
@@ -145,14 +181,16 @@ body {
   .navbar-brand p img { /* Star-K */
     height: 20px;
   }
+
   #collapsable-nav a { /* Collapsed nav menu text */
     font-size: 1.2em;
   }
-  #collapsable-nav a span { /* Collapsed nav menu text */
+  #collapsable-nav a span { /* Collapsed nav menu glyph */
     font-size: 1em;
     margin-right: 5px;
   }
-    #call-btn > a {
+
+  #call-btn > a {
     font-size: 1.5em;
     display: block;
     margin: 0 20px;
@@ -173,9 +211,29 @@ body {
   .container .jumbotron {
     margin-top: 30px;
     padding: 0;
-    box-shadow: 0 0 50px #3F0C1F;
-    border: 5px solid #3F0C1F;
   }
-  /* End Home Page */
+
+  #menu-tile, #specials-tile {
+    width: 360px;
+    margin: 0 auto 15px;
+  }
 
 }
+
+
+/********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
+@media (max-width: 479px) {
+  /* Header */
+  .navbar-brand h1 { /* Restaurant name */
+    padding-top: 5px;
+    font-size: 6vw;
+  }
+  /* End Header */
+  
+  /* Home page */
+  #menu-tile, #specials-tile {
+    width: 280px;
+    margin: 0 auto 15px;
+  }
+}
+
