317 Lecture 36, Part 1: Coding the Footer

--- a/sites/l31/css/styles.css
+++ b/sites/l31/css/styles.css
@@ -109,7 +109,18 @@ body {
   background: url('../images/specials-tile.jpg') no-repeat;
   background-position: center;
 }
-
+#menu-tile span, #specials-tile span, #map-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
 
 /* END HOME PAGE */
 
@@ -223,5 +234,6 @@ body {
     width: 280px;
     margin: 0 auto 15px;
   }
+
 }
 
