--- a/sites/mod3_solution/css/style.css
+++ b/sites/mod3_solution/css/style.css
@@ -1,7 +1,9 @@
 
 .item {
   position: relative;
-  background-color: #AAAAAA;
+  border-radius: 5px;
+  box-shadow: 0 0 14px rgba(90,90,90,0.3);
+  background-color: #BBB;
   margin: 10px;
   box-sizing: border-box;
   overflow: hidden;
